--- a/package.json
+++ b/package.json
@@ -3,28 +3,53 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.11.0",
+    "@hookform/resolvers": "^5.0.1",
+    "@prisma/client": "^6.7.0",
+    "@radix-ui/react-checkbox": "^1.2.3",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-select": "^2.2.2",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.9",
+    "bcrypt": "^5.1.1",
+    "canvas-confetti": "^1.9.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.10.4",
+    "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.10.51",
+    "lucide-react": "^0.503.0",
     "next": "15.3.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "zod": "^3.22.4"
+    "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.1",
+    "react-phone-number-input": "^3.4.12",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.2.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/canvas-confetti": "^1.9.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^20.17.32",
+    "@types/nodemailer": "^6.4.17",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "postcss": "^8",
-    "prisma": "^5.11.0",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "prisma": "^6.7.0",
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.2.8",
+    "typescript": "^5.8.3"
   }
 }
