--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-phone-number-input": "^3.4.12",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.3"
   },
   "devDependencies": {
