--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-phone-number-input": "^3.4.12",
