--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.10.4",
+    "i18n-iso-countries": "^7.14.0",
     "jsonwebtoken": "^9.0.2",
-    "libphonenumber-js": "^1.10.51",
+    "libphonenumber-js": "^1.12.8",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
