--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-phone-number-input": "^3.4.12",
+    "react-select": "^5.10.1",
+    "react-select-country-list": "^2.2.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
@@ -49,6 +51,9 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19",
+    "@types/react-phone-number-input": "^3.0.17",
+    "@types/react-select": "^5.0.0",
+    "@types/react-select-country-list": "^2.2.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "prisma": "^6.7.0",
