--- a/package.json
+++ b/package.json
@@ -21,17 +21,19 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.10.4",
+    "framer-motion": "^12.12.1",
+    "i18n-iso-countries": "^7.14.0",
     "jsonwebtoken": "^9.0.2",
-    "libphonenumber-js": "^1.10.51",
+    "libphonenumber-js": "^1.12.8",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
-    "react-country-flag": "^3.1.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-hot-toast": "^2.5.2",
+    "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.12",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
